--- a/css/deletarFuncionario.css
+++ b/css/deletarFuncionario.css
@@ -60,7 +60,7 @@ main {
     font-family: var(--fonte2);
 }
 .cabecalho__navegacao__Marca__Estilo {
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: var(--fonte2);
     color: var(--cor-laranja);
 }
@@ -204,6 +204,9 @@ main {
     background-color: transparent;
     border: none;
     cursor: pointer;
+}
+.container__conteudo__funcionarios__divisoes__titulo__foto{
+    width: 3rem;
 }
 .footer {
     background-color: var(--cor-vinho);
