--- a/css/editarProduto.css
+++ b/css/editarProduto.css
@@ -60,7 +60,7 @@ main {
     font-family: var(--fonte2);
 }
 .cabecalho__navegacao__Marca__Estilo {
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: var(--fonte2);
     color: var(--cor-laranja);
 }
@@ -70,6 +70,9 @@ main {
     text-decoration: none;
     padding: 0.6rem 1.3rem;
     border: solid 2px var(--cor-branca);
+}
+#fotoProduto{
+    display: none;
 }
 .container {
     padding-top: 12rem;
