--- a/css/gerenciarFuncionarios.css
+++ b/css/gerenciarFuncionarios.css
@@ -60,7 +60,7 @@ main {
     font-family: var(--fonte2);
 }
 .cabecalho__navegacao__Marca__Estilo {
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: var(--fonte2);
     color: var(--cor-laranja);
 }
@@ -167,6 +167,9 @@ main {
     color: var(--cor-preto);
     margin-bottom: 0.5rem;
 }
+.container__conteudo__funcionarios__divisoes__titulo__foto{
+    width: 3rem;
+}
 .container__conteudo__funcionarios__divisoes__input{
     background-color: transparent;
     color: var(--cor-preto);
@@ -180,7 +183,7 @@ main {
     width: 2rem;
     margin: 1rem 1rem;
 }
-.container__conteudo__auxiliar__semproduto{
+.container__conteudo__auxiliar__semfuncionario{
     color: var(--cor-preto);
     padding: 1rem 0;
 }
