--- a/css/listarFuncionarioNome.css
+++ b/css/listarFuncionarioNome.css
@@ -60,7 +60,7 @@ main {
     font-family: var(--fonte2);
 }
 .cabecalho__navegacao__Marca__Estilo {
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: var(--fonte2);
     color: var(--cor-laranja);
 }
@@ -136,6 +136,9 @@ main {
 .container__conteudo__centralizar__pesquisa__imagem{
     width: 2rem;
     margin: 1rem 1rem;
+}
+.container__conteudo__funcionarios__divisoes__titulo__foto{
+    width: 3rem;
 }
 .container__conteudo__auxiliar{
     width: 90vw;
