--- a/css/listarProdutoNome.css
+++ b/css/listarProdutoNome.css
@@ -60,7 +60,7 @@ main {
     font-family: var(--fonte2);
 }
 .cabecalho__navegacao__Marca__Estilo {
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: var(--fonte2);
     color: var(--cor-laranja);
 }
@@ -144,7 +144,7 @@ main {
     align-items: center;
     flex-direction: column;
 }
-.container__conteudo__funcionarios{
+.container__conteudo__produtos{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -156,18 +156,21 @@ main {
     background-color: transparent;
     width: 100%;
 }
-.container__conteudo__funcionarios__divisoes{
+.container__conteudo__produtos__divisoes{
     display: flex;
     flex-direction: column;
     align-items: center;
     color: var(--cor-preto);
     text-align: center;
 }
-.container__conteudo__funcionarios__divisoes__titulo{
+.container__conteudo__produtos__divisoes__titulo{
     color: var(--cor-preto);
     margin-bottom: 0.5rem;
 }
-.container__conteudo__funcionarios__divisoes__input{
+.container__conteudo__produtos__divisoes__titulo__foto{
+    width: 3rem;
+}
+.container__conteudo__produtos__divisoes__input{
     background-color: transparent;
     color: var(--cor-preto);
     border: none;
@@ -176,7 +179,7 @@ main {
     width: 4rem;
     margin-bottom: 1rem;
 }
-.container__conteudo__funcionarios__divisoes__imagem{
+.container__conteudo__produtos__divisoes__imagem{
     width: 2rem;
     margin: 1rem 1rem;
 }
@@ -222,11 +225,11 @@ main {
     .cabecalho__navegacao__Marca {
         font-size: 4rem;
     }
-    .container__conteudo__funcionarios{
+    .container__conteudo__produtos{
         flex-direction: row;
         flex-wrap: wrap;
      }
-     .container__conteudo__funcionarios__divisoes{
+     .container__conteudo__produtos__divisoes{
          margin: 0 1rem;
          width: 10%;
      }
